Fix horizontal overflow on mobile

--- a/src/web/index.scss
+++ b/src/web/index.scss
@@ -56,6 +56,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .main-content {
   flex: 1;
+  min-width: 0;
   padding: 1.5rem;
   padding-top: calc(#{$status-bar-height} + 1.5rem);
 
